Fixed some spacing issues with class names

--- a/src/components/Developer/Dev.css
+++ b/src/components/Developer/Dev.css
@@ -23,7 +23,7 @@ img {
   width: 40em;
 }
 
-.contact {
+.contactDev {
   margin: 3em .3em 0 0;
   color: black;
 }
